... [api] - EnergyInfoProvider - new config:   show item count   optional-but-not-recommended nbt data sync   force custom implementation because idk why not
[runtime]
- move inventory, progress, and effect tooltip to tail
- funni one char key to make the data a little smaller
- actually fix the stack problem
- skip empty item stack